--- a/ext/wdm/wdm.vcxproj.filters
+++ b/ext/wdm/wdm.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="entry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="global.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="monitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -28,6 +25,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="wdm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rb_change.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rb_monitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -44,5 +50,19 @@
     <ClCompile Include="wdm.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rb_change.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rb_monitor.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utils.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="extconf.rb">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
