--- a/ext/wdm/wdm.vcxproj
+++ b/ext/wdm/wdm.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="entry.h" />
+    <ClInclude Include="memory.h" />
     <ClInclude Include="monitor.h" />
     <ClInclude Include="queue.h" />
     <ClInclude Include="rb_change.h" />
@@ -86,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="entry.c" />
+    <ClCompile Include="memory.c" />
     <ClCompile Include="monitor.c" />
     <ClCompile Include="queue.c" />
     <ClCompile Include="rb_change.c" />
