Adjust non-Windows spec to succeed on Windows
... and match file naming of other spec files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Run non-windows specs
         if: matrix.os != 'windows'
-        run: ruby -S rspec spec/non-windows.rb -cfdoc
+        run: ruby -S rspec spec/require_spec.rb -cfdoc
 
       - name: Print logs if job failed
         if: ${{ failure() && matrix.os == 'windows' }}
